--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,16 @@
 .cursor_pointer {
   cursor: pointer;
 }
+
+.JobCard:hover {
+  background-color: rgb(239, 243, 251);
+}
+
+.text_color:hover {
+  transition: color 0.1s ease;
+  color: #0d6efd;
+}
+
+.fs-7 {
+  font-size: 14px;
+}
